nymea-plugins-modbus (1.7.013) jammy; urgency=medium

  * Solax: Improve power calculation
  * Sungrow SG: Only show inverter in discovery

 -- Luis Reber <l.reber@consolinno.de> Wed, 26 Feb 2025 15:59:10 +0100

nymea-plugins-modbus (1.7.012-1) jammy; urgency=medium

  * lambda: smaller plugin fixes (enumerate, build workaround)
  * IDM: add pvsurplusheatpump interface and extend plugin
  * Fix Amperfied connect.home discovery
  * SMA plugin update and fixes
  * Added separate entry for vestel and eon wallbox
  * SDM630: Fix energy per phase
  * Added Janitza UMG 604 Pro meter
  * Match vendor uuids
  * Fix currentPower to zero when thing not reachable
  * Huawei added battery capacity
  * Solax: Updated power calculation
    Use correct EV Charger name
  * Added Kaco NH3

 -- Luis Reber <l.reber@consolinno.de> Thu, 28 Nov 2024 13:49:00 +0100

nymea-plugins-modbus (1.7.011-1) jammy; urgency=medium

  * Restore Sungrow SG

 -- Luis Reber <l.reber@consolinno.de> Thu, 28 Nov 2024 13:49:00 +0100

nymea-plugins-modbus (1.7.010-1) jammy; urgency=medium

  * Added inverter and battery control for Solax X3
  * Generate QCells entry from Solax
    - Updated name
  * Added Sofarsolar hybrid inverter (Modbus RTU)
  * Added Lambda heat pump (Modbus TCP)
  * Generate QCells G3 Wallbox Integration from Solax EVC
    - Updated name
  * DvModbusIR: Read more states more frequently
    - Added as Meter, Consumer and Inverter
  * Inital release of QCells Gen 4 EV Charger.
  * Added Broetje heat pump plugin.
  * Matched Kostalmeter integration to SDM630 integration
  * Added Kostalmeter as Consumer and Inverter
  * Fixes for FoxESS WB Gen3: 
    - Skip discovery for IPv6
    - Start charging when state is paused
  * Updated sungrow integration to match nymea
  * Inital release of Solax X3 Ultra wit one battery.
  * Improve timing in Alfen plugin
  * ABB Terra: Fix for charge session energy
  * Fix for Mennekes: Set phaseCount to 1 when not charging.